# ike

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  constants.py  pyproject.toml
django/: manage.py
django/neodjango/: asgi.py  settings.py  urls.py  wsgi.py
llm/: agent.py
neo4jdb/: compose.yaml
scripts/: create_venv.sh  install_dependencies_poetry.sh  install_poetry.sh  run_streamlit_ui.sh  stop_streamlit_ui.sh
streamlit_ui/: auth.py  chat.py  constants.py  context_management.py  file_uploader.py  sidebar.py
